--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -817,4 +817,5 @@
     <string name="achievement_tab_title">Достижение</string>
     <string formatted="false" name="remove_addresses_dialog_message">Удалить адрес собственности \"%s\"?</string>
     <string name="empty_flat_error">Некорректный адрес</string>
+    <string name="news_government_moscow">Новости правительства Москвы</string>
 </resources>
