--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -584,7 +584,7 @@
     <string name="error_has_not_auth_the_application">Не удается разместить пост на Вашей стене в социальной сети, так как Вы не дали разрешение при авторизации. Попробуйте повторить операцию</string>
     <string name="hint_for_fb">Например:\n%s</string>
     <string name="empty_post_text">Введите текст сообщения</string>
-    <string name="hint_example_for_fb">Например, скопируйте текст:</string>
+    <string name="hint_example_for_fb">Скопируйте текст:</string>
     <string name="attention_posting_fb">Вы уже делились этой информацией в Facebook и Вам были начислены дополнительные баллы. Баллы начисляются только за первое сообщение. Вы хотите поделиться ещё раз?</string>
     <string name="title_answer">ОТВЕТЫ:</string>
     <string name="title_answer_passed">ВАШ ОТВЕТ:</string>
