--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -826,4 +826,5 @@
     <string name="news_government_moscow">Новости правительства Москвы</string>
     <string name="poll_old_empty_title">Вы еще не участвовали ни в одном голосовании</string>
     <string name="info_survey_title">Информирование</string>
+    <string name="your_comment" formatted="false">Ваш комментарий: %s</string>
 </resources>
