--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -827,4 +827,5 @@
     <string name="poll_old_empty_title">Вы еще не участвовали ни в одном голосовании</string>
     <string name="info_survey_title">Информирование</string>
     <string name="your_comment" formatted="false">Ваш комментарий: %s</string>
+    <string name="poll_inform_title">Информирование</string>
 </resources>
