--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -828,4 +828,7 @@
     <string name="info_survey_title">Информирование</string>
     <string name="your_comment" formatted="false">Ваш комментарий: %s</string>
     <string name="poll_inform_title">Информирование</string>
+    <string name="registered_in_service">Есть регистрация в сервисах Москвы?</string>
+    <string name="password_or_code">Пароль (код)</string>
+    <string name="auth_description">Если вы уже получали код или являетесь пользователем сервисов Москвы, то укажите ваш телефон и пароль (код) для входа.Сервисы на платформе ЕМП:\n\n\nНаш город, Госуслуги Москвы, Узнай Москву, Парковки Москвы, ЕМИАС города Москвы</string>
 </resources>
