--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -804,7 +804,7 @@
     <string name="title_item_add_friend">Добавить друга</string>
     <string name="profile_title">Профиль</string>
     <string name="friend_profile_invisible">Пользователь скрыл свои данные</string>
-    <string name="success_send_sms">СМС \"%s\" успешно доставлено</string>
+    <string name="success_send_sms">СМС \"%s\"\nуспешно доставлено</string>
     <string name="error_send_sms">К сожалению, не удалось доставить СМС \"%s\"</string>
     <string name="title_dialog_edit_profile">Вы хотите перейти в режим редактирования данных?</string>
     <string name="empty_achievement_list">Информации по достижениям нет</string>
