--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -776,7 +776,7 @@
     <string name="offerta_offer">условиями оферты</string>
     <string name="title_less">Свернуть</string>
     <string name="get_permission_sms">Для автоматического чтения кода  из СМС при авторизации и регистрации необходимо предоставить разрешение</string>
-    <string name="auth_error_confirm_code_not_correct">Неверный код подтверждения</string>
+    <string name="auth_error_confirm_code_not_correct">Ошибка авторизации</string>
     <string name="permission_camera_gallery">Для корректной работы необходимо предоставить доступ к камере и внутренней памяти устройства</string>
     <string name="crop_image_menu_crop">Вырезать</string>
     <string name="crop_image_menu_flip_horizontally">Перевернуть по горизонтали</string>
