--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -850,4 +850,5 @@
     <string name="push_group_news">Новости</string>
     <string name="push_group_polls">Голосования</string>
     <string name="warning_enter_password">Введите пароль.</string>
+    <string name="data_not_found">Данные не найдены</string>
 </resources>
