--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -395,7 +395,7 @@
     <string name="location">Место жительства</string>
     <string name="social">Социальные сети</string>
     <string name="title_survey_question">ВОПРОС %s</string>
-    <string name="result_send">Завершить голосование</string>
+    <string name="result_send">Завершить</string>
     <string name="action_survey_subsrcribe">Настройка оповещения</string>
     <string name="empty_old_pollslist">Список прошедших голосований пуст</string>
     <string name="polls_old">Прошедшие</string>
