--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -904,4 +904,5 @@
     <string name="phone_in_format">Телефон в формате 9XXXXXXXXX</string>
     <string name="mos.ru_phone_mask">(###)###-##-##</string>
     <string name="mos.ru_snils">###-###-###-##</string>
+    <string name="electronic_house_placing_an_order">Размещение заявки</string>
 </resources>
